--- a/src/App.css
+++ b/src/App.css
@@ -65,11 +65,12 @@
 
 /* MODAL */
 .modalContainer {
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  left: 0;
-  right: 0;
+  position: relative;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  /* left: 0;
+  right: 0; */
   z-index: 100;
   border: green 10px solid;
   opacity: 1;
@@ -83,5 +84,6 @@
   position: absolute;
   top: 25vh;
   right: 25vw;
+  z-index: 1000;
   background-color: white;
 }
