--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,35 +1,75 @@
+/* GENERAL HEADER */
+
 .header {
-  /* border: red 2px solid; */
-  height: 13vh;
+  /* border: goldenrod 2px solid; */
+  height: 120px;
+  padding: 10px 10px 10px 15px;
   display: flex;
   gap: 10px;
 }
 
+/* LOGO HEADER */
 .header img {
-  border: 2px magenta solid;
+  /* border: 2px magenta solid; */
   width: 100px;
-  height: 40px;
 }
 
-.logo {
-  border: 2px green solid;
-  width: 20%;
+.header .logo {
+  /* border: 2px green solid; */
+  width: 120px;
+  height: 100%;
   flex: 15;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.buttons {
-  border: 2px blue solid;
-  flex: 35;
+/* HEADER BUTTONS */
+
+.header-buttons {
+  /* border: 2px blue solid; */
   height: 100%;
-  width: 40%;
+  width: 430px;
+  padding: 40px 0px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 15px;
+}
+
+.signup-login-buttons {
+  /* border: 2px red solid; */
+  display: flex;
+  gap: 20px;
+}
+
+.header-buttons button {
+  width: 120px;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.signup-login-buttons button {
+  background-color: white;
+  border: #2baeb7 solid 1px;
+  color: #2baeb7;
+}
+
+.header-sell-articles button {
+  background-color: #2baeb7;
+  color: white;
+}
+
+.disconnect-button {
+  padding: 40px;
+}
+
+.disconnect-button button {
+  background-color: #c2175b;
+  color: white;
 }
 
 .buttons .hidden {
