--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -4,20 +4,18 @@
   height: 100vh;
   width: 100vw;
   z-index: 100;
-  /* border: green 10px solid; */
   opacity: 1;
   background-color: rgba(255, 255, 255, 0.7);
 }
 
 .modal-container .modal {
   background-color: #2baeb7;
-  padding: 30px;
   height: fit-content;
-  width: 25vw;
-  /* border: blue 2px solid; */
+  width: 320px;
+  padding: 50px 30px;
   position: absolute;
-  top: 10vh;
-  right: 37.5vw;
+  top: 40px;
+  right: calc((100% - 320px) / 2);
   z-index: 1000;
   display: flex;
   flex-direction: column;
@@ -26,7 +24,6 @@
   gap: 40px;
   border-radius: 20px;
   color: white;
-  /* position: relative; */
 }
 
 .modal-container .modal h1 {
@@ -58,6 +55,38 @@ button {
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+.modal .conditions {
+  font-size: 12px;
+  line-height: 10px;
+}
+
+.modal-submit {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-submit button {
+  width: 100%;
+}
+
+.modal-submit span {
+  color: rgb(172, 5, 5);
+  text-align: center;
+}
+
+.modal-submit p {
+  font-size: 12px;
+  line-height: 10px;
+}
+
+.modal-submit p:hover {
+  cursor: pointer;
 }
 
 .modal .closing-button {
