--- a/src/components/PagesNumber/pagesNumber.css
+++ b/src/components/PagesNumber/pagesNumber.css
@@ -1,6 +1,10 @@
 .page-buttons {
+  /* border: red 2px solid; */
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 5px;
+  height: 40px;
 }
 
 .page-button {
