--- a/src/components/OfferDisplay/offerDisplay.css
+++ b/src/components/OfferDisplay/offerDisplay.css
@@ -35,12 +35,26 @@
   width: 100%;
   height: 360px;
   /* border: green 2px solid; */
+  position: relative;
 }
 
-.main-image-container img {
+.main-image-container img:first-child {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.main-image-container .sold {
+  position: absolute;
+  bottom: 20px;
+  left: 60px;
+  font-size: 30px;
+  font-weight: bold;
+  color: red;
+  border: 2px solid red;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: whitesmoke;
 }
 
 .home-product-details {
