--- a/src/components/SelectedOffer/selectedOffer.css
+++ b/src/components/SelectedOffer/selectedOffer.css
@@ -14,6 +14,20 @@
   /* border: red solid 1px; */
   width: 330px;
   height: 500px;
+  position: relative;
+}
+
+.offer-page .sold {
+  position: absolute;
+  bottom: 50px;
+  left: 105px;
+  font-size: 30px;
+  font-weight: bold;
+  color: red;
+  border: 2px solid red;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: whitesmoke;
 }
 
 .offer-page > section:first-child > img {
